<resources>
    <string name="app_name">Room</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="comment">Comment</string>
    <string name="add">Add</string>
    <string name="records_total">Records total:</string>
    <string name="found_records">Found records:</string>
</resources>