<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddPersonActivity">

    <LinearLayout
        android:id="@+id/editNameLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_left_margin"
        android:layout_marginTop="@dimen/base_top_margin"
        android:layout_marginEnd="@dimen/base_right_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/textInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLength="@integer/name_surname_max_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameEditText"
                style="@style/textInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:maxLength="@integer/name_surname_max_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentEditText"
                style="@style/textInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"
                android:maxLength="@integer/comment_max_length" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addPersonSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_top_margin"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@+id/editNameLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/editNameLinearLayout" />

    <Button
        android:id="@+id/addPersonCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_between_buttons"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/addPersonSaveButton"
        app:layout_constraintStart_toEndOf="@+id/addPersonSaveButton"
        app:layout_constraintTop_toTopOf="@+id/addPersonSaveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>